--- a/gb/16/4/22/n7586570.md
+++ b/gb/16/4/22/n7586570.md
@@ -1,11 +1,11 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/danrww3636/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/danrww3636/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/danrww3636/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/danrww3636/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/danrww3636/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/danrww3636/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/danrww3636/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/danrww3636/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/danrww3636/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/danrww3636/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/danrww3636/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/danrww3636/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/danrww3636/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/danrww3636/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/danrww3636/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/danrww3636/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/danrww3636/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/danrww3636/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/danrww3636/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/danrww3636/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/danrww3636/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/danrww3636/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/danrww3636/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/danrww3636/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中国经济奇迹的核心秘密：变卖土地（上）</h2>
 
 <h6></h6>
 <hr>
-	<p>【大纪元2016年04月23日讯】<ahref="https://github.com/danrww3636/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%BB%8F%E6%B5%8E.md#1">中国经济</a>的飞速崛起，成为统治者甚至被统治者的共同骄傲，也成为一个对传统经济学、非传统经济学乃至任何经济学的巨大挑战。即便是最激烈的持不同意见人士，也不得不承认这一“改革开放”所造成的宏伟“政绩”，而只能尴尬地在“但是”后面做文章。无论在公开或私下场合，我从来不敢对这一“中国奇迹”苟同。任何一个具有正常思维与常识的成年人，都会对这个奇妙的“千年盛世”问一个为什么。（自然，他必须还葆有提出问题的能力。）——是社会制度先进吗？是科技教育领先全球吗？一概不是。</p>
+	<p>【大纪元2016年04月23日讯】<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%BB%8F%E6%B5%8E.md#1">中国经济</a>的飞速崛起，成为统治者甚至被统治者的共同骄傲，也成为一个对传统经济学、非传统经济学乃至任何经济学的巨大挑战。即便是最激烈的持不同意见人士，也不得不承认这一“改革开放”所造成的宏伟“政绩”，而只能尴尬地在“但是”后面做文章。无论在公开或私下场合，我从来不敢对这一“中国奇迹”苟同。任何一个具有正常思维与常识的成年人，都会对这个奇妙的“千年盛世”问一个为什么。（自然，他必须还葆有提出问题的能力。）——是社会制度先进吗？是科技教育领先全球吗？一概不是。</p>
 <p>可以简单而不失深刻地说：“中国奇迹”并非任何一种经济活动，因之也并非任何一种经济学可以解释，因为它完全溢出了经济范畴，而是一场这个星球历史上从未见过的大规模抢劫。</p>
 <p>抢劫的核心点，在于资源与环境。</p>
 <p>本文试图简略地勾画出其大项。其中最大一项，即是对土地资源的掠夺和变卖。</p>
@@ -20,7 +20,7 @@
 <p>2014年4.2万亿；</p>
 <p>2015年预计近4万亿。</p>
 <p>按官方的帐薄，这5年卖地收入加起来高达18万亿。</p>
-<p><strong>土地制度沿革：从<ahref="https://github.com/danrww3636/djy/blob/master/gb/tag/%E6%9A%B4%E5%8A%9B%E5%9C%9F%E6%94%B9.md#1">暴力土改</a>到让步政策</strong></p>
+<p><strong>土地制度沿革：从<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%9A%B4%E5%8A%9B%E5%9C%9F%E6%94%B9.md#1">暴力土改</a>到让步政策</strong></p>
 <p>中共建政前后的“土改”，依仗暴力把土地从最善于经营的富裕农民手中夺走，分给乡村贫民，以诱使他们参与中共革命。1949年1月31日，史大林派米高扬在西柏坡同毛举行了一周秘密会谈。在谈及土地政策时，米高扬委婉地表示，把没收来的地主和富农的土地又分给农民太可惜了。按照马列主义观点，集中起来搞集体农庄才好。毛的解释是：农民分到了土地才会真正感到翻身解放，才会踊跃参军参战。我们就是因为有两百万农民参军，几百万农民支援前线，才取得了今天的胜利，才有可能夺取最后的胜利。毛泽东有一句名言：“我们把土地分给农民，农民帮我们打了二十年仗。”</p>
 <p>所谓“共产主义”、“共产党”，就是要剥夺私有产权，消灭市民社会。深谙统治术的毛泽东早在延安窑洞中就透彻地洞悉了这个秘密。</p>
 <p>全国“土改”结束于1953年。接下来，庄稼还没收第三茬，“合作化运动”开始，然后又一日千里地推行“公社化运动”，土地国有，土地又从农民手中收走，成为党国所有。从此，中国农民沦为没有土地、耕牛、马匹、犁铧，因之也没有个性，没有自由，没有独立，没有人格的农奴。</p>
@@ -39,8 +39,8 @@
 <p>在深圳政府率先“出让”公有土地之后，稍迟一些，从八、九十年代之交开始，中国形成过三次官员大建私房的浪潮。每省官员所建私房一般为两三万户，多的在七八万户以上。房子档次较高，不是党政官员凭工资收入就能盖起来的。甚至在一些贫困地区的县城，也同样出现了民众称之为“官府街”的成片干部私房，与一般简陋民房形成鲜明对比。中央政府三令五申，不准干部盖私房，但屡禁不止。但官员们做好动工前的各种准备，一旦有人带头冲破禁令便大干快上，转眼之间就形成大建“官府街”之热潮。</p>
 <p>同样是从八、九十年代之交开始，中国农民也掀起了占用耕地大建新房的全国性浪潮。这就又出现了一个新词汇——“空心村”，即在原有的村庄周围大兴土木，另建新村，旧村的房屋任其闲置亦不拆宅还田。其原因，既可能是受“官府街”之启发，也可能完全是自发。虽然土地承包制拒不放弃土地所有权公有，但毕竟有所松动，把所有权的一个子权利——使用权还给了农民。那么，有谁不愿意借承包（即经营使用权）之名，在公有的土地上蚕食下来一块属于私人的宅基地呢？新占的宅基地上盖了新房，但旧房不拆，因为那是一块传统上属于自己的、已经到手的土地。因此之故，实行这种“灰色”土地制度的头几年，农民建房势不可挡，如春风野火，瞬间席卷全国，其数量竟等于1949年建政以来三十多年之总和，其占用的耕地，至1990年已达到2.42亿亩。</p>
 <p>深圳政府“出让”公有土地和“官府街”、“空心村”席卷全国，在时间上一概在全面推行土地承包制之后。这其中的因果关系不言自明，都是在土地制度松动之后，政府、官员与农民不约而同地哄抢土地。但是，政府迅即制止了民间的带有恢复正义色彩的哄抢，而把土地变成了自己武装守卫的金库。</p>
-<p><strong>八九民运失败：疯狂<ahref="https://github.com/danrww3636/djy/blob/master/gb/tag/%E5%9C%88%E5%9C%B0.md#1">圈地</a>开始</strong></p>
-<p>同样在八、九十年之交，1989年发生了一件深刻影响中国历史进程的大事——以“反官倒、反腐败”为口号的全国性民主运动。所谓“官倒”、“腐败”，其来源就是“价格双轨制”。跟“社会主义”、“共产主义”一样，这个“双轨制”也不是经济运动的自然结果，而是一种人为的制度设计。其思路是这样的：既不能坚持原教旨的政府控制经济，因为必将导致经济崩溃，是死路一条；又恐惧市场调控的商品经济，因为共产党将会失去权力，是绝不允许的；剩下的，只能是一条中间道路，即在坚持统治权力的前提下，部分引进市场机制。不管是不是经济学家，都能看出这必然造成普遍性的腐败。果不其然，“双轨制”立竿见影式地产生大规模社会腐败，并引发了席卷全国的89民运。政府当局对民主运动的血腥镇压，以及随后东欧、苏联相继垮台，使中共统治的合法性遭到普遍性怀疑。邓小平的对策是继续硬干下去，以刺激经济发展来缓和民愤，以钱来换取统治合法性，其口号是“坚持改革开放”。他在南巡讲话中毫不隐讳地说：“如果没有改革开放的成果，‘六·四’这个关我们闯不过，闯不过就乱，乱就打内战，‘文化大革命’就是内战。为什么‘六·四’以后我们的国家能够很稳定？就是因为我们搞了改革开放，促进了经济发展，人民生活得到了改善。”在这个讲话之后，土地制度方面的“继续改革开放”就是土地审批权下放，到处疯狂<ahref="https://github.com/danrww3636/djy/blob/master/gb/tag/%E5%9C%88%E5%9C%B0.md#1">圈地</a>，房地产业井喷式发展。全国房地产公司从过去的3千多家暴增到1992年底的1.2万家，再继续暴涨到1993年底的3万家，是两年前的10倍。</p>
+<p><strong>八九民运失败：疯狂<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%9C%88%E5%9C%B0.md#1">圈地</a>开始</strong></p>
+<p>同样在八、九十年之交，1989年发生了一件深刻影响中国历史进程的大事——以“反官倒、反腐败”为口号的全国性民主运动。所谓“官倒”、“腐败”，其来源就是“价格双轨制”。跟“社会主义”、“共产主义”一样，这个“双轨制”也不是经济运动的自然结果，而是一种人为的制度设计。其思路是这样的：既不能坚持原教旨的政府控制经济，因为必将导致经济崩溃，是死路一条；又恐惧市场调控的商品经济，因为共产党将会失去权力，是绝不允许的；剩下的，只能是一条中间道路，即在坚持统治权力的前提下，部分引进市场机制。不管是不是经济学家，都能看出这必然造成普遍性的腐败。果不其然，“双轨制”立竿见影式地产生大规模社会腐败，并引发了席卷全国的89民运。政府当局对民主运动的血腥镇压，以及随后东欧、苏联相继垮台，使中共统治的合法性遭到普遍性怀疑。邓小平的对策是继续硬干下去，以刺激经济发展来缓和民愤，以钱来换取统治合法性，其口号是“坚持改革开放”。他在南巡讲话中毫不隐讳地说：“如果没有改革开放的成果，‘六·四’这个关我们闯不过，闯不过就乱，乱就打内战，‘文化大革命’就是内战。为什么‘六·四’以后我们的国家能够很稳定？就是因为我们搞了改革开放，促进了经济发展，人民生活得到了改善。”在这个讲话之后，土地制度方面的“继续改革开放”就是土地审批权下放，到处疯狂<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%9C%88%E5%9C%B0.md#1">圈地</a>，房地产业井喷式发展。全国房地产公司从过去的3千多家暴增到1992年底的1.2万家，再继续暴涨到1993年底的3万家，是两年前的10倍。</p>
 <p>——“官府街”与“空心村”这种自发式的耕地流失，现在汇入了新的狂热的动力。</p>
 <p><strong>最后一个扭转国运的机会：政治局内激烈斗争</strong></p>
 <p>还有一个重要的标志性事件。</p>
@@ -56,35 +56,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/danrww3636/djy/blob/master/gb/12/11/20/n3733849.md#1">丁东：又一座触目惊心的墓碑——《血的神话》序二</a></li>
-<li><a href="https://github.com/danrww3636/djy/blob/master/gb/13/12/9/n4030330.md#1">孙文广:近代中国三次土地大掠夺——三论私有化</a></li>
-<li><a href="https://github.com/danrww3636/djy/blob/master/gb/14/5/7/n4149052.md#1">郑义：所有问题都在于有没有一张地契</a></li>
-<li><a href="https://github.com/danrww3636/djy/blob/master/gb/16/2/16/n4640635.md#1">镰刀锤子帮造成的乡村凋零 令人难以置信</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/12/11/20/n3733849.md#1">丁东：又一座触目惊心的墓碑——《血的神话》序二</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/12/9/n4030330.md#1">孙文广:近代中国三次土地大掠夺——三论私有化</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/5/7/n4149052.md#1">郑义：所有问题都在于有没有一张地契</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/2/16/n4640635.md#1">镰刀锤子帮造成的乡村凋零 令人难以置信</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/danrww3636/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/18/n10570999.md#1" target="_blank">凌晓辉：毒害人类灵魂的共产主义理论（中）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/24/n10998917.md#1" target="_blank">影片：与全世界背道而行 中共为何打击善良</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/1/n10752586.md#1" target="_blank">共产暴政录：毛泽东同学夏曦“肃反”创纪录</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/30/n10441048.md#1" target="_blank">西人学炼法轮功 生活发生深刻变化</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/abrwif329/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
-<li><a href="https://github.com/abrwif329/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
-<li><a href="https://github.com/abrwif329/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
-<li><a href="https://github.com/abrwif329/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
-<li><a href="https://github.com/abrwif329/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/abrwif329/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/abrwif329/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
-<li><a href="https://github.com/abrwif329/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
-<li><a href="https://github.com/abrwif329/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
-<li><a href="https://github.com/abrwif329/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
-<li><a href="https://github.com/abrwif329/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
-<li><a href="https://github.com/abrwif329/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
-<li><a href="https://github.com/abrwif329/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
-<li><a href="https://github.com/abrwif329/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
-<li><a href="https://github.com/abrwif329/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740789.md#1">【拍案惊奇】李克强不再低调？从刘少奇说起</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740248.md#1">【远见快评】美媒曝东航坠毁是人为 东航回应</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740582.md#1">【十字路口】习近平卧病不起？海外爆料透玄机</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739779.md#1">美国房市是否放缓 现在是买房好时机吗？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/danrww3636/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/danrww3636/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/4/22/n7586570.htm">中国经济奇迹的核心秘密：变卖土地（上）</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/4/22/n7586570.htm">中国经济奇迹的核心秘密：变卖土地（上）</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/danrww3636/djy/blob/master/gb/16/4/22/n7586570.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/danrww3636/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/danrww3636/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/danrww3636/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/danrww3636/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/danrww3636/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/danrww3636/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/danrww3636/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/danrww3636/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/danrww3636/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/danrww3636/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/danrww3636/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/danrww3636/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/danrww3636/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/danrww3636/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/danrww3636/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/danrww3636/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/danrww3636/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/danrww3636/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/danrww3636/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/danrww3636/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/danrww3636/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/danrww3636/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/danrww3636/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/danrww3636/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/danrww3636/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/16/4/22/n7586570.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
