--- a/gb/21/12/16/n13441625.md
+++ b/gb/21/12/16/n13441625.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/sxvshi319/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/sxvshi319/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/sxvshi319/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/sxvshi319/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>官方称连18年丰收 习却问“粮食怎么办”</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/12/id13441628-000_1DN2RZ-600x400.jpg" />
 <h6>习近平在最近的一次会议上发出对粮食危机的担忧。图为2019年2月19日河北省暖泉一面政治宣传墙前一堆晒干的玉米。(Greg Baker/AFP)
 </h6>
 <hr>
-	<p>【大纪元2021年12月16日讯】（香港大纪元记者张明健采访报导）中共官方公布的数据声称<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%B2%AE%E9%A3%9F.md#1">中国粮食</a>生产至少连续18年丰收，但中共最高领导人<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>却在最近的一次会议上发出对<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E7%B2%AE%E9%A3%9F%E5%8D%B1%E6%9C%BA.md#1">粮食危机</a>的担忧。</p>
+	<p>【大纪元2021年12月16日讯】（香港大纪元记者张明健采访报导）中共官方公布的数据声称<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%B2%AE%E9%A3%9F.md#1">中国粮食</a>生产至少连续18年丰收，但中共最高领导人<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>却在最近的一次会议上发出对<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%B2%AE%E9%A3%9F%E5%8D%B1%E6%9C%BA.md#1">粮食危机</a>的担忧。</p>
 <p><strong>听新闻：</strong></p>
 <div style="width: 100%; height: 200px; margin-bottom: 20px; border-radius: 6px; overflow: hidden;"><a style="width: 100%; height: 200px;" frameborder="no" scrolling="no" seamless src="https://player.captivate.fm/episode/45210bbf-fb76-42c7-9c48-88a53c4a739a"></a></div>
-<p><strong>（听更多请至<ahref="https://github.com/sxvshi319/djy/blob/master/gb/podcast.md#1">“听纪元”</a>平台）</strong></p>
-<p>12月8日，<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>在中央经济工作会议上说：“过去是南粮北调，现在是北粮南调。一些地方大把的良田不种粮食，要么建养殖场，要么是种花卉果木，那么粮食怎么办？”</p>
-<p>根据中共统计局12月6日公布的数据，<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%B2%AE%E9%A3%9F.md#1">中国粮食</a>生产已经连续18年“丰收”，2021年全国粮食总产量68,285万吨，创历史最新纪录，比去年增加1,336万吨，增长2.0%。</p>
+<p><strong>（听更多请至<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/podcast.md#1">“听纪元”</a>平台）</strong></p>
+<p>12月8日，<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>在中央经济工作会议上说：“过去是南粮北调，现在是北粮南调。一些地方大把的良田不种粮食，要么建养殖场，要么是种花卉果木，那么粮食怎么办？”</p>
+<p>根据中共统计局12月6日公布的数据，<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%B2%AE%E9%A3%9F.md#1">中国粮食</a>生产已经连续18年“丰收”，2021年全国粮食总产量68,285万吨，创历史最新纪录，比去年增加1,336万吨，增长2.0%。</p>
 <p>与此同时，中国粮食进口总量预计将连续2年创历史纪录。根据海关公布的数据，2019年中国进口粮食共计11,144万吨；2020年中国进口粮食14,262.1万吨，同比增加27.97%；2021年前10个月进口粮食13,795.6万吨，同比增加近23%，预计今年全年粮食进口总额将超过2020年。</p>
 <p>香港财经专栏作家廖仕明12月15日对大纪元说，去年以来，中国在本国“大丰收”的情况下，一直在抢购全球粮食，凸显中共政府急需增加粮食的库存。</p>
 <p>值得注意的是，今年中国一些粮食主产区遭遇了洪水等严重的灾害，而中共政府仍声称“丰收”。</p>
@@ -22,10 +22,10 @@
 <p>一些东北粮食主产区的农民对大纪元说：“现在种地赚不了几个钱，搞不好还赔钱，谁种啊？！”“种子、化肥那么贵，政府是给点补贴，但还不够交村儿里的任务呢！”</p>
 <p>农民口中的“任务”是指：农村最低一级的基层政府以多种名目向农民收取钱财，以供该基层政府开支，这些开支包括一些不被上级政府允许的、同时不会被列入政府预算的灰色开支，以及供基层官员腐败行为所用。</p>
 <p>“任务”还包括，当农民无法完成基层政府分派给他们的、义务的劳役工作时，这些农民需要向基层政府支付一定额度的钱财作为补偿。</p>
-<p>中国<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E8%80%95%E5%9C%B0%E9%9D%A2%E7%A7%AF.md#1">耕地面积</a>不足同样是限制粮食产量的重要因素，虽然中共官方声称中国耕地面积是19亿亩，并强调18亿亩是耕地红线不能动，但实际上耕种面积却一直在减少。习近平就是在前述会议上表达了这种担忧，官媒称，他注意到“耕地面积还在减少”。</p>
+<p>中国<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%80%95%E5%9C%B0%E9%9D%A2%E7%A7%AF.md#1">耕地面积</a>不足同样是限制粮食产量的重要因素，虽然中共官方声称中国耕地面积是19亿亩，并强调18亿亩是耕地红线不能动，但实际上耕种面积却一直在减少。习近平就是在前述会议上表达了这种担忧，官媒称，他注意到“耕地面积还在减少”。</p>
 <p>廖仕明说，东南部的省份是中国的经济引擎，那里的高产田基本都被工业化，而新增的耕地多位于中国西部地区，那里自然条件不适合耕种，降雨和气温条件都很差，就导致粮食产量少，这是中国农业的大问题。</p>
-<p>早在2014年，中共农业部表示，中国超过40%的<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E8%80%95%E5%9C%B0%E9%9D%A2%E7%A7%AF.md#1">耕地面积</a>已经退化。而中共环保部和国土资源部公布的数据显示，中国至少两成耕地遭到污染，折合耕地面积约3.5亿亩。</p>
-<p>2002年，中共在全国范围开展“<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E9%80%80%E8%80%95%E8%BF%98%E6%9E%97.md#1">退耕还林</a>”运动，声称“改善生态环境”。到2019年，全国有1.39亿亩耕地改为林地或草地。</p>
+<p>早在2014年，中共农业部表示，中国超过40%的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%80%95%E5%9C%B0%E9%9D%A2%E7%A7%AF.md#1">耕地面积</a>已经退化。而中共环保部和国土资源部公布的数据显示，中国至少两成耕地遭到污染，折合耕地面积约3.5亿亩。</p>
+<p>2002年，中共在全国范围开展“<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E9%80%80%E8%80%95%E8%BF%98%E6%9E%97.md#1">退耕还林</a>”运动，声称“改善生态环境”。到2019年，全国有1.39亿亩耕地改为林地或草地。</p>
 <p>当年的一位亲历者告诉大纪元，在东北粮食主产区，他家旁边，原本种着粟米的一大片肥沃的耕地，被政府强行从农民手中收走，转让给一个当地人种树。</p>
 <p>“十几年了，那片地长成了浓密的杨树林。”</p>
 <p>责任编辑：连书华#</p>
@@ -34,35 +34,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/11/16/n13379120.md#1">陈思敏：中国粮食丰收增产背后的四大问题</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/11/25/n13398206.md#1">中共粮食系统官员大清洗 逾两百人被查</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/12/7/n13422552.md#1">习再提经济六稳六保 中共御用专家泄真实情况</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/12/15/n13438803.md#1">习近平称“粮食怎么办” 凸显内外交困加剧</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/11/16/n13379120.md#1">陈思敏：中国粮食丰收增产背后的四大问题</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/11/25/n13398206.md#1">中共粮食系统官员大清洗 逾两百人被查</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/12/7/n13422552.md#1">习再提经济六稳六保 中共御用专家泄真实情况</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/12/15/n13438803.md#1">习近平称“粮食怎么办” 凸显内外交困加剧</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11256379.md#1" target="_blank">观雨堂主：历史并未忘记</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/17/n11800547.md#1" target="_blank">新年集体炼功交流 法轮功修炼者遍及俄罗斯</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/1/n10014980.md#1" target="_blank">林辉：文革荒诞事 误损毛像引出大祸端</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/8/2/n2983321.md#1" target="_blank">诚宇：捅破心灵的那层窗户纸</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/21/n11960123.md#1">【拍案惊奇】川普指中共延误 武汉二次爆发预警</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/21/n11961699.md#1">追责中共隐瞒疫情 国际专家提六大方案</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/21/n11960837.md#1">中共声称疫情“零增长” 民众揭背后真相</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/22/n11962341.md#1">对北京掩盖疫情失望 川普：中共非常诡秘</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/20/n11958206.md#1">TWICE周子瑜首本个人照片书 4月27日发行</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/20/n11959037.md#1">甄子丹携妻小自美返港 戴电子手环强制隔离</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/20/n11959858.md#1">范丞丞爆范冰冰糗事：姐姐因被误会遭父母打</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/10/n11929076.md#1">天地清明引(234) 降天罪－琼林鏖战4</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740789.md#1">【拍案惊奇】李克强不再低调？从刘少奇说起</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740248.md#1">【远见快评】美媒曝东航坠毁是人为 东航回应</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740582.md#1">【十字路口】习近平卧病不起？海外爆料透玄机</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739779.md#1">美国房市是否放缓 现在是买房好时机吗？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/sxvshi319/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/sxvshi319/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/16/n13441625.htm">官方称连18年丰收 习却问“粮食怎么办”</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/16/n13441625.htm">官方称连18年丰收 习却问“粮食怎么办”</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/sxvshi319/djy/blob/master/gb/21/12/16/n13441625.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/sxvshi319/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/sxvshi319/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/sxvshi319/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/21/12/16/n13441625.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
